--- a/.github/workflows/make_ndk_musl.yml
+++ b/.github/workflows/make_ndk_musl.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [arm-linux-musleabi, arm-linux-musleabihf, armeb-linux-musleabi, armeb-linux-musleabihf, aarch64-linux-musl, aarch64_be-linux-musl, loongarch64-linux-musl, mips-linux-musleabihf, mips64-linux-muslabin32, mipsel-linux-musleabihf, mips64el-linux-muslabin32, powerpc-linux-musleabi, powerpc-linux-musleabihf, powerpc64-linux-musl, powerpc64le-linux-musl, riscv32-linux-musl, riscv64-linux-musl, s390x-linux-musl, x86-linux-musl, x86_64-linux-musl]
+        target: [arm-linux-musleabi, aarch64-linux-musl]
     steps:
       - name: Checkout android-ndk-custom
         uses: actions/checkout@v4
@@ -63,11 +63,7 @@ jobs:
               libxml2-dev libxmlsec1-dev zlib1g-dev libcrypt-dev \
               libexpat1-dev libc6-dev-i386 libbluetooth-dev \
               libopus-dev libogg-dev libvorbis-dev libpulse-dev \
-              libdb5.3-dev libnsl-dev gawk cmake
-          sudo curl -LkSs -o /tmp/qemu-user-binfmt.deb http://ftp.us.debian.org/debian/pool/main/q/qemu/qemu-user-binfmt_10.0.0+ds-2_amd64.deb
-          sudo curl -LkSs -o /tmp/qemu-user-static.deb http://ftp.us.debian.org/debian/pool/main/q/qemu/qemu-user-static_10.0.0+ds-2_amd64.deb
-          sudo curl -LkSs -o /tmp/qemu-user.deb http://ftp.us.debian.org/debian/pool/main/q/qemu/qemu-user_10.0.0+ds-2_amd64.deb
-          sudo apt install -y /tmp/*.deb
+              libdb5.3-dev libnsl-dev gawk cmake qemu-user-static
 
       - name: Build Extra Dependencies
         run: |
@@ -94,16 +90,16 @@ jobs:
           ./configure \
           --prefix="${PWD}/build" \
           --build=${{ matrix.target }} \
-          --host=${{ matrix.target }} \
+          --host=x86_64-linux-gnu \
           CC=${TOOLCHAIN}/bin/cc \
           CXX=${TOOLCHAIN}/bin/c++ \
           LD=${TOOLCHAIN}/bin/ld \
           OBJCOPY=${TOOLCHAIN}/bin/objcopy \
           AR=${TOOLCHAIN}/bin/ar \
           STRIP=${TOOLCHAIN}/bin/strip \
-          CFLAGS="-fstack-protector-strong -fsanitize=undefined -static" \
-          CXXFLAGS="-fstack-protector-strong -fsanitize=undefined -static" \
-          LDFLAGS="-static"
+          CFLAGS="-O2 -fstack-clash-protection -fstack-protector-strong -static-pie -Wno-unused-command-line-argument" \
+          CXXFLAGS="-O2 -fstack-clash-protection -fstack-protector-strong -static-pie -Wno-unused-command-line-argument" \
+          LDFLAGS="-Wl,-z,relro,-z,now -s -static-pie"
           make -j"$(nproc --all)" install
 
           cd $HOME
@@ -118,7 +114,7 @@ jobs:
           ./configure \
           --prefix="${PWD}/build" \
           --build=${{ matrix.target }} \
-          --host=${{ matrix.target }} \
+          --host=x86_64-linux-gnu \
           --disable-nls \
           CC=${TOOLCHAIN}/bin/cc \
           CXX=${TOOLCHAIN}/bin/c++ \
@@ -126,9 +122,9 @@ jobs:
           OBJCOPY=${TOOLCHAIN}/bin/objcopy \
           AR=${TOOLCHAIN}/bin/ar \
           STRIP=${TOOLCHAIN}/bin/strip \
-          CFLAGS="-fstack-protector-strong -static -fwrapv -Wno-error=date-time" \
-          CXXFLAGS="-fstack-protector-strong -static -fwrapv -Wno-error=date-time" \
-          LDFLAGS="-static"
+          CFLAGS="-O2 -fstack-clash-protection -fstack-protector-strong -static-pie -fwrapv -Wno-error=date-time -Wno-unused-command-line-argument" \
+          CXXFLAGS="-O2 -fstack-clash-protection -fstack-protector-strong -static-pie -fwrapv -Wno-error=date-time -Wno-unused-command-line-argument" \
+          LDFLAGS="-Wl,-z,relro,-z,now -s -static-pie"
           make -j"$(nproc --all)" install
 
           # SPIRV-Tools and shaderc
@@ -157,10 +153,10 @@ jobs:
           rm -rf .git
           cmake -S "$HOME/shaderc" -B "$HOME/shaderc/build" -G Ninja \
             -DCMAKE_INSTALL_PREFIX="$HOME/shaderc/install" \
-            -DCMAKE_BUILD_TYPE=MinSizeRel \
-            -DCMAKE_C_FLAGS="$([[ "${{ matrix.target }}" == "hexagon-linux-musl" ]] && echo '-Wno-bitfield-width -Wno-error=bitfield-width') -fstack-protector-strong -fsanitize=undefined -static" \
-            -DCMAKE_CXX_FLAGS="$([[ "${{ matrix.target }}" == "hexagon-linux-musl" ]] && echo '-Wno-bitfield-width -Wno-error=bitfield-width') -fstack-protector-strong -fsanitize=undefined -static" \
-            -DCMAKE_EXE_LINKER_FLAGS="-static" \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_C_FLAGS="$([[ "${{ matrix.target }}" == "hexagon-linux-musl" ]] && echo '-Wno-bitfield-width -Wno-error=bitfield-width') -O2 -fstack-clash-protection -fstack-protector-strong -static-pie -Wno-unused-command-line-argument" \
+            -DCMAKE_CXX_FLAGS="$([[ "${{ matrix.target }}" == "hexagon-linux-musl" ]] && echo '-Wno-bitfield-width -Wno-error=bitfield-width') -O2 -fstack-clash-protection -fstack-protector-strong -static-pie -Wno-unused-command-line-argument" \
+            -DCMAKE_EXE_LINKER_FLAGS="-Wl,-z,relro,-z,now -s -static-pie" \
             -DCMAKE_CROSSCOMPILING=True \
             -DCMAKE_SYSTEM_NAME=Linux \
             -DCMAKE_C_COMPILER="${TOOLCHAIN}/bin/cc" \
@@ -204,9 +200,9 @@ jobs:
           OBJCOPY=${TOOLCHAIN}/bin/objcopy \
           AR=${TOOLCHAIN}/bin/ar \
           STRIP=${TOOLCHAIN}/bin/strip \
-          CFLAGS="-fstack-protector-strong -fsanitize=undefined -static -Wno-error=date-time" \
-          CXXFLAGS="-fstack-protector-strong -fsanitize=undefined -static -Wno-error=date-time" \
-          LDFLAGS="-static" \
+          CFLAGS="-O3 -fstack-clash-protection -fstack-protector-strong -g0 -static-pie -Wno-error=date-time -Wno-unused-command-line-argument" \
+          CXXFLAGS="-O3 -fstack-clash-protection -fstack-protector-strong -g0 -static-pie -Wno-error=date-time -Wno-unused-command-line-argument" \
+          LDFLAGS="-Wl,-z,relro,-z,now -s -static-pie" \
           ac_cv_func_dlopen=no ac_cv_file__dev_ptmx=no ac_cv_file__dev_ptc=no
           make -j"$(nproc --all)" build_all || echo "WARNING: issue in building python for ${{ matrix.target }}"
           make install
